force-app/main/default/objects/Contact/fields/account6QA6sense__c.field-meta.xml
<CustomField>
    <fullName>account6QA6sense__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The 6QA status of the account for the product.
The values are either:
• 1 = 6QA
• 0= Not 6QA</inlineHelpText>
    <label>6sense Account 6QA</label>
    <type>Checkbox</type>
</CustomField>