force-app/main/default/objects/Contact/fields/account6QAAgeInDays6sense__c.field-meta.xml
<CustomField>
    <fullName>account6QAAgeInDays6sense__c</fullName>
    <inlineHelpText>Days the account has been in 6QA status.</inlineHelpText>
    <label>6sense Account 6QA Age in Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>