force-app/main/default/objects/Contact/fields/account6QAStartDate6sense__c.field-meta.xml
<CustomField>
    <fullName>account6QAStartDate6sense__c</fullName>
    <inlineHelpText>The date the account qualified for 6QA status (YYYY-MM-DD).</inlineHelpText>
    <label>6sense Account 6QA Start Date</label>
    <type>Date</type>
</CustomField>