force-app/main/default/objects/Contact/fields/accountBuyingStage6sense__c.field-meta.xml
<CustomField>
    <fullName>accountBuyingStage6sense__c</fullName>
    <inlineHelpText>The representation of the measure of how much an account is behaving like accounts with which
there is a history of previously opened opps.
Target - Buyer may not realize a problem exists, but may fit within the seller’s TAM
Awareness - Buyer realizes they have a problem. The buyer is doing educational research
Consideration - Buyer defines their problem &amp; researches options to solve it
Decision - Buyer chooses a solution
Purchase - Buyer commits to a solution &amp; justifies the reasons for purchase</inlineHelpText>
    <label>6sense Account Buying Stage</label>
    <length>100</length>
    <type>Text</type>
</CustomField>