force-app/main/default/objects/Contact/fields/accountIntentScore6sense__c.field-meta.xml
<CustomField>
    <fullName>accountIntentScore6sense__c</fullName>
    <inlineHelpText>A measure, between 0 and 100, of how much an account is behaving like accounts with which there is a history of previously opened opportunities.</inlineHelpText>
    <label>6sense Account Intent Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>