force-app/main/default/objects/Contact/fields/accountProfileScore6sense__c.field-meta.xml
<CustomField>
    <fullName>accountProfileScore6sense__c</fullName>
    <inlineHelpText>A measure of how similar a company is to the ideal customer profile. Firmographic and technographic factors of an account, along with historical opportunity history, are used by data science models to create this measure.</inlineHelpText>
    <label>6sense Account Profile Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>