force-app/main/default/objects/Contact/fields/Accredited_Institutional_Investor__c.field-meta.xml
<CustomField>
    <fullName>Accredited_Institutional_Investor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Are they an accredited institutional investor?</description>
    <inlineHelpText>Are they an accredited institutional investor?</inlineHelpText>
    <label>Accredited Institutional Investor?</label>
    <type>Checkbox</type>
</CustomField>