force-app/main/default/objects/Contact/fields/Active_Users_on_Platform__c.field-meta.xml
<CustomField>
    <fullName>Active_Users_on_Platform__c</fullName>
    <label>Active Users on Platform</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Active_Users_On_Platform</valueSetName>
    </valueSet>
</CustomField>