force-app/main/default/objects/Contact/fields/Additional_Email_Addresses__c.field-meta.xml
<CustomField>
    <fullName>Additional_Email_Addresses__c</fullName>
    <label>Additional Email Addresses</label>
    <length>255</length>
    <type>Text</type>
</CustomField>