force-app/main/default/objects/Contact/fields/Alliance_Prog_Contact_Application_Status__c.field-meta.xml
<CustomField>
    <fullName>Alliance_Prog_Contact_Application_Status__c</fullName>
    <label>Alliance Prog Contact Application Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>PDR Review</fullName>
            </value>
            <value>
                <fullName>PDR Qualified</fullName>
            </value>
            <value>
                <fullName>Compliance Review</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>PDR Rejected</fullName>
            </value>
            <value>
                <fullName>Compliance Rejected</fullName>
            </value>
            <value>
                <fullName>Terminated</fullName>
            </value>
            <value>
                <fullName>Recycled</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
                <isActive>false</isActive>
                <label>Rejected</label>
            </value>
            <value>
                <fullName>SDR Review</fullName>
                <isActive>false</isActive>
                <label>SDR Review</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>