force-app/main/default/objects/Contact/fields/Anticipated_Yield_Investment_Date__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_Yield_Investment_Date__c</fullName>
    <description>When would they like to make their first investment?</description>
    <inlineHelpText>When would they like to make their first investment?</inlineHelpText>
    <label>Anticipated Yield Investment Date</label>
    <type>Date</type>
</CustomField>