force-app/main/default/objects/Contact/fields/Applicable_Payment_Rails__c.field-meta.xml
<CustomField>
    <fullName>Applicable_Payment_Rails__c</fullName>
    <description>If the prospect has existing payments, what is their average monthly payments volume?</description>
    <inlineHelpText>If the prospect has existing payments, what is their average monthly payments volume?</inlineHelpText>
    <label>Applicable Payment Rails?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit Card / Debit Card</fullName>
            </value>
            <value>
                <fullName>ACH</fullName>
            </value>
            <value>
                <fullName>SEPA</fullName>
            </value>
            <value>
                <fullName>Wires</fullName>
            </value>
            <value>
                <fullName>On Chain</fullName>
            </value>
            <value>
                <fullName>Core API</fullName>
            </value>
            <value>
                <fullName>Smartphone (Apple Pay, Google Pay, Samsung Pay, etc.)</fullName>
            </value>
            <value>
                <fullName>Faster Payments</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>