force-app/main/default/objects/Contact/fields/Auth_Rep_test__c.field-meta.xml
<CustomField>
    <fullName>Auth_Rep_test__c</fullName>
    <label>Auth Rep (test)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>