force-app/main/default/objects/Contact/fields/Average_Monthly_Payments_Volume__c.field-meta.xml
<CustomField>
    <fullName>Average_Monthly_Payments_Volume__c</fullName>
    <description>If the prospect has existing payments, what is their average monthly payments volume?</description>
    <inlineHelpText>If the prospect has existing payments, what is their average monthly payments volume?</inlineHelpText>
    <label>Average Monthly Payments Volume?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>We&apos;re just getting started</fullName>
            </value>
            <value>
                <fullName>Under $50,000</fullName>
            </value>
            <value>
                <fullName>$50,000-$100,000</fullName>
            </value>
            <value>
                <fullName>$100,000-$500,000</fullName>
            </value>
            <value>
                <fullName>$500,000-$5,000,000</fullName>
            </value>
            <value>
                <fullName>Under $500,000</fullName>
            </value>
            <value>
                <fullName>Over $500,000</fullName>
            </value>
            <value>
                <fullName>More than $5,000,000</fullName>
            </value>
            <value>
                <fullName>I just want help setting up my Circle Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>