force-app/main/default/objects/Contact/fields/Became_a_SAL_date__c.field-meta.xml
<CustomField>
    <fullName>Became_a_SAL_date__c</fullName>
    <label>Became a SAL date</label>
    <type>Date</type>
</CustomField>