force-app/main/default/objects/Contact/fields/Became_a_Subscriber_Date__c.field-meta.xml
<CustomField>
    <fullName>Became_a_Subscriber_Date__c</fullName>
    <label>Became a Subscriber Date</label>
    <type>Date</type>
</CustomField>