force-app/main/default/objects/Contact/fields/Became_an_Other_Lifecycle_Date__c.field-meta.xml
<CustomField>
    <fullName>Became_an_Other_Lifecycle_Date__c</fullName>
    <label>Became an Other Lifecycle Date</label>
    <type>Date</type>
</CustomField>