force-app/main/default/objects/Contact/fields/Billing_Start_Date_DA__c.field-meta.xml
<CustomField>
    <fullName>Billing_Start_Date_DA__c</fullName>
    <label>Billing Start Date DA</label>
    <type>Date</type>
</CustomField>