force-app/main/default/objects/Contact/fields/Blockchain_Info_Details__c.field-meta.xml
<CustomField>
    <fullName>Blockchain_Info_Details__c</fullName>
    <description>Add any additional info for Blockchain Details.</description>
    <inlineHelpText>Add any additional info for Blockchain Details.</inlineHelpText>
    <label>Blockchain Info Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>