force-app/main/default/objects/Contact/fields/Blockchains_Building_Operating_on__c.field-meta.xml
<CustomField>
    <fullName>Blockchains_Building_Operating_on__c</fullName>
    <description>Which blockchains is the company building or operating on?</description>
    <inlineHelpText>Which blockchains is the company building or operating on?</inlineHelpText>
    <label>Blockchains Building/Operating on?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Alogrand</fullName>
                <label>Algorand</label>
            </value>
            <value>
                <fullName>Arbitrum</fullName>
            </value>
            <value>
                <fullName>Avalanche</fullName>
            </value>
            <value>
                <fullName>Base</fullName>
            </value>
            <value>
                <fullName>Celo</fullName>
            </value>
            <value>
                <fullName>Ethereum</fullName>
            </value>
            <value>
                <fullName>Flow</fullName>
            </value>
            <value>
                <fullName>Hedera</fullName>
            </value>
            <value>
                <fullName>NEAR</fullName>
            </value>
            <value>
                <fullName>Noble</fullName>
            </value>
            <value>
                <fullName>Optimism</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Polkadot</fullName>
            </value>
            <value>
                <fullName>Polygon</fullName>
            </value>
            <value>
                <fullName>Solana</fullName>
            </value>
            <value>
                <fullName>Stellar</fullName>
            </value>
            <value>
                <fullName>zkSync</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>