force-app/main/default/objects/Contact/fields/Booking_Status_CP__c.field-meta.xml
<CustomField>
    <fullName>Booking_Status_CP__c</fullName>
    <description>This field will set a value of &quot;Booked&quot; or &quot;Not Booked&quot; based on whether a prospect books a meeting via an Inbound Router. The &quot;Not Booked&quot; value will write once the timeout expires within &quot;Queues for prospects who didn&apos;t take action&quot;. If that timeout expires and someone still books, the value will be overwritten when the booking happens.</description>
    <label>Most Recent Booking Status CP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>