force-app/main/default/objects/Contact/fields/Business_Development_Owner_text__c.field-meta.xml
<CustomField>
    <fullName>Business_Development_Owner_text__c</fullName>
    <description>This is used to get the text value to display in Salesloft</description>
    <formula>Account.Business_Development_Owner_text__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Development Owner (text)</label>
    <type>Text</type>
</CustomField>