force-app/main/default/objects/Contact/fields/Business_Name_DA__c.field-meta.xml
<CustomField>
    <fullName>Business_Name_DA__c</fullName>
    <label>Business Name DA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>