force-app/main/default/objects/Contact/fields/Capital_Markets_Sub_Vertical__c.field-meta.xml
<CustomField>
    <fullName>Capital_Markets_Sub_Vertical__c</fullName>
    <label>Capital Markets Sub Vertical</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Capital_Markets_Sub_Vertical</valueSetName>
    </valueSet>
</CustomField>