force-app/main/default/objects/Contact/fields/Circle_Entity_ID__c.field-meta.xml
<CustomField>
    <fullName>Circle_Entity_ID__c</fullName>
    <label>Circle Entity ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>