force-app/main/default/objects/Contact/fields/Circle_Lead_Scoring__c.field-meta.xml
<CustomField>
    <fullName>Circle_Lead_Scoring__c</fullName>
    <label>Circle Lead Scoring</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>