force-app/main/default/objects/Contact/fields/Circle_Ventures_Owner__c.field-meta.xml
<CustomField>
    <fullName>Circle_Ventures_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Circle Ventures Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts5</relationshipName>
    <type>Lookup</type>
</CustomField>