force-app/main/default/objects/Contact/fields/City_Cognism__c.field-meta.xml
<CustomField>
    <fullName>City_Cognism__c</fullName>
    <label>City (Cognism)</label>
    <length>155</length>
    <type>Text</type>
</CustomField>