force-app/main/default/objects/Contact/fields/City_DA__c.field-meta.xml
<CustomField>
    <fullName>City_DA__c</fullName>
    <label>City DA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>