force-app/main/default/objects/Contact/fields/Cognism_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Cognism_Record_ID__c</fullName>
    <label>Cognism Record ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>