force-app/main/default/objects/Contact/fields/Company_Alias_Cognism__c.field-meta.xml
<CustomField>
    <fullName>Company_Alias_Cognism__c</fullName>
    <label>Company Alias (Cognism)</label>
    <length>155</length>
    <type>Text</type>
</CustomField>