force-app/main/default/objects/Contact/fields/Company_Description__c.field-meta.xml
<CustomField>
    <fullName>Company_Description__c</fullName>
    <description>For the Circle Alliance qualification section. This field will roll up to the account into a formula field</description>
    <inlineHelpText>For the Circle Alliance qualification section. This field will roll up to the account record.</inlineHelpText>
    <label>Company Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>