force-app/main/default/objects/Contact/fields/Company_Domain_Cognism__c.field-meta.xml
<CustomField>
    <fullName>Company_Domain_Cognism__c</fullName>
    <label>Company Domain (Cognism)</label>
    <length>155</length>
    <type>Text</type>
</CustomField>