force-app/main/default/objects/Contact/fields/Confirm_Business_Model_from_Research__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Business_Model_from_Research__c</fullName>
    <description>Used by the inside sales team during their discovery calls</description>
    <inlineHelpText>Additional info on the business description</inlineHelpText>
    <label>Confirm Business Model from Research</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>