force-app/main/default/objects/Contact/fields/Confirm_Discord_presence_username__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Discord_presence_username__c</fullName>
    <description>For SDR to populate Discord username</description>
    <inlineHelpText>Please populate with the member&apos;s Discord username</inlineHelpText>
    <label>Confirm Discord presence &amp; username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>