force-app/main/default/objects/Contact/fields/Confirm_mint_volume_from_CA_Application__c.field-meta.xml
<CustomField>
    <fullName>Confirm_mint_volume_from_CA_Application__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by Inside Sales during the discovery call.</description>
    <inlineHelpText>Please check this box to confirm the customer&apos;s mint volume on their CA application.</inlineHelpText>
    <label>Confirm Mint Volume from CA Application</label>
    <type>Checkbox</type>
</CustomField>