force-app/main/default/objects/Contact/fields/Confirm_Retail_Universe__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Retail_Universe__c</fullName>
    <description>Used by the Inside Sales team during their discovery calls</description>
    <inlineHelpText>Populate if applicable</inlineHelpText>
    <label>Confirm Retail Universe</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>