force-app/main/default/objects/Contact/fields/Contact_ID_Cognism__c.field-meta.xml
<CustomField>
    <fullName>Contact_ID_Cognism__c</fullName>
    <label>Contact ID (Cognism)</label>
    <length>155</length>
    <type>Text</type>
</CustomField>