force-app/main/default/objects/Contact/fields/Contact_Is_Spam__c.field-meta.xml
<CustomField>
    <fullName>Contact_Is_Spam__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contact Is Spam</label>
    <type>Checkbox</type>
</CustomField>