force-app/main/default/objects/Contact/fields/Contact_Sales_Reason__c.field-meta.xml
<CustomField>
    <fullName>Contact_Sales_Reason__c</fullName>
    <label>Contact Sales Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Setting up or managing my Circle Account</fullName>
            </value>
            <value>
                <fullName>I want to learn more about how Circle can help my business</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Something else</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>