force-app/main/default/objects/Contact/fields/contactGrade6sense__c.field-meta.xml
<CustomField>
    <fullName>contactGrade6sense__c</fullName>
    <inlineHelpText>A measure of how engaged a person is with your first party sales and marketing tactics compared to previous buyers. Engagement activities of a person, along with historical opportunity history, are used by data science models to create this measure.</inlineHelpText>
    <label>6sense Contact Grade</label>
    <length>100</length>
    <type>Text</type>
</CustomField>