force-app/main/default/objects/Contact/fields/contactIntentScore6sense__c.field-meta.xml
<CustomField>
    <fullName>contactIntentScore6sense__c</fullName>
    <inlineHelpText>A measure of how engaged a person is with your first party sales and marketing tactics compared to previous buyers. Engagement activities of a person, along with historical opportunity history, are used by data science models to create this measure.</inlineHelpText>
    <label>6sense Contact Intent Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>