force-app/main/default/objects/Contact/fields/contactProfileFit6sense__c.field-meta.xml
<CustomField>
    <fullName>contactProfileFit6sense__c</fullName>
    <inlineHelpText>A measure of how similar the person is to your typical buyer or buying committee members. Demographic factors of a person record, along with historical opportunity history, are 6SENSE CONFIDENTIAL used by data science models to create this measure.</inlineHelpText>
    <label>6sense Contact Profile Fit</label>
    <length>100</length>
    <type>Text</type>
</CustomField>