force-app/main/default/objects/Contact/fields/contactProfileScore6sense__c.field-meta.xml
<CustomField>
    <fullName>contactProfileScore6sense__c</fullName>
    <inlineHelpText>A measure of how similar the person is to your typical buyer or buying committee members. Demographic factors of a person record, along with historical opportunity history, are used by data science models to create this measure.</inlineHelpText>
    <label>6sense Contact Profile Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>