force-app/main/default/objects/Contact/fields/contactUpdateDate6sense__c.field-meta.xml
<CustomField>
    <fullName>contactUpdateDate6sense__c</fullName>
    <inlineHelpText>The latest update date and time when 6sense Scores were updated.</inlineHelpText>
    <label>6sense Contact Update Date</label>
    <type>Date</type>
</CustomField>