force-app/main/default/objects/Contact/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>New Country field - Jan 2023 - used for new regional routing. This Country field rolls up to Region in a Hubspot workflow</description>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country_of_Incorporation</valueSetName>
    </valueSet>
</CustomField>