force-app/main/default/objects/Contact/fields/Country_Cognism__c.field-meta.xml
<CustomField>
    <fullName>Country_Cognism__c</fullName>
    <label>Country (Cognism)</label>
    <length>155</length>
    <type>Text</type>
</CustomField>