force-app/main/default/objects/Contact/fields/Country_Of_Residence_DA__c.field-meta.xml
<CustomField>
    <fullName>Country_Of_Residence_DA__c</fullName>
    <label>Country Of Residence DA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country_of_Incorporation</valueSetName>
    </valueSet>
</CustomField>