force-app/main/default/objects/Contact/fields/Country_Principal_Place_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Country_Principal_Place_of_Business__c</fullName>
    <description>In what country is their Principal Place of Business (PPOB)?</description>
    <inlineHelpText>In what country is their Principal Place of Business (PPOB)?</inlineHelpText>
    <label>Country Principal Place of Business</label>
    <length>255</length>
    <type>Text</type>
</CustomField>