force-app/main/default/objects/Contact/fields/Current_Cadence_Name__c.field-meta.xml
<CustomField>
    <fullName>Current_Cadence_Name__c</fullName>
    <label>Current Cadence Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>