force-app/main/default/objects/Contact/fields/Current_User_Is_Account_BD_Or_Owner__c.field-meta.xml
<CustomField>
    <fullName>Current_User_Is_Account_BD_Or_Owner__c</fullName>
    <formula>IF(OR($User.Id = Account.Business_Development_Owner__c,$User.Id = Account.OwnerId), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current User Is Account BD Or Owner</label>
    <type>Checkbox</type>
</CustomField>