force-app/main/default/objects/Contact/fields/Currently_in_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Currently_in_Sequence__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Currently in Sequence</label>
    <type>Checkbox</type>
</CustomField>