force-app/main/default/objects/Contact/fields/customer_base__c.field-meta.xml
<CustomField>
    <fullName>customer_base__c</fullName>
    <description>Verite discovery question</description>
    <inlineHelpText>Do they have a large network of users or customers that would benefit from Verite?</inlineHelpText>
    <label>Customer base</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>